example/xray-2/base/statefulset-xray-rabbitmq-ha.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rabbitmq-ha
  name: xray-rabbitmq-ha
  namespace: zero
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-ha
  serviceName: xray-rabbitmq-ha-discovery
  template:
    metadata:
      annotations:
        checksum/config: a4c33a1d17e6623105cba04b24122746f1a81a1eecc1d29da86a44596424c41d
        checksum/secret: 49e6fe05099c64f24ddc18da88156481f371d1c93993ec6a7e171d35599d310f
      labels:
        app: rabbitmq-ha
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: rabbitmq-ha
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: RABBITMQ_USE_LONGNAME
          value: "true"
        - name: RABBITMQ_NODENAME
          value: rabbit@$(MY_POD_NAME).xray-rabbitmq-ha-discovery.zero.svc.cluster.local
        - name: K8S_HOSTNAME_SUFFIX
          value: .xray-rabbitmq-ha-discovery.zero.svc.cluster.local
        - name: K8S_SERVICE_NAME
          value: xray-rabbitmq-ha-discovery
        - name: RABBITMQ_ERLANG_COOKIE
          valueFrom:
            secretKeyRef:
              key: rabbitmq-erlang-cookie
              name: xray-rabbitmq-ha
        - name: RABBIT_MANAGEMENT_USER
          valueFrom:
            secretKeyRef:
              key: rabbitmq-management-username
              name: xray-rabbitmq-ha
        - name: RABBIT_MANAGEMENT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: rabbitmq-management-password
              name: xray-rabbitmq-ha
        image: docker.bintray.io/rabbitmq:3.8.7-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'timeout 5 wget -O - -q --header "Authorization: Basic `echo -n \"$RABBIT_MANAGEMENT_USER:$RABBIT_MANAGEMENT_PASSWORD\" | base64`" http://127.0.0.1:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        name: rabbitmq-ha
        ports:
        - containerPort: 4369
          name: epmd
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        - containerPort: 15672
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'timeout 3 wget -O - -q --header "Authorization: Basic `echo -n \"$RABBIT_MANAGEMENT_USER:$RABBIT_MANAGEMENT_PASSWORD\" | base64`" http://127.0.0.1:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
          failureThreshold: 6
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: data
        - mountPath: /etc/rabbitmq
          name: config
        - mountPath: /etc/definitions
          name: definitions
          readOnly: true
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: xray-rabbitmq-ha
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: config
      - configMap:
          name: xray-rabbitmq-ha
        name: configmap
      - name: definitions
        secret:
          items:
          - key: definitions.json
            path: definitions.json
          secretName: xray-rabbitmq-ha
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
  - metadata:
      annotations: {}
      labels: {}
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
