example/xray-2/base/networkpolicy-xray-xray-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: xray
    component: xray
  name: xray-xray-networkpolicy
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: xray
  policyTypes:
  - Ingress
  - Egress
